# beads-cell-growth

./: .gitignore  24_beads.py  260115_rom_96well_beads_day1.xls  96_beads.py  Baseline_ODs_stdev.csv  CITATION.cff  Input_ODs.csv  Makefile  README.md  aggregate_multi_sources.py  make_od_heatmaps.py  morning_supplements.py  pyproject.toml  run_aggregate_oneoff.py  ttubes_beads.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml
data/: Baseline_ODs.xlsx  Supplement_ODs.xlsx
data/experimental/: 260122_rom_24plates_2_pombe_beads_pub.xlsx  260122_rom_ttubes_2_pombe_beads_pub.xlsx
data/microscopy/: README.md  WellB06_PointB06_0002_ChannelFITC BP_Seq0128.nd2  WellB10_PointB10_0004_ChannelFITC BP_Seq0094.nd2  WellF06_PointF06_0003_ChannelFITC BP_Seq0309.nd2  WellF10_PointF10_0007_ChannelFITC BP_Seq0277.nd2  combined_dic_measurements_96well.csv  combined_dic_measurements_supplements.csv  summary_stats_supplements.csv
data/plate-reader/: 260115_rom_96well_beads_day1.xlsx  260116_rom_96well_beads_day2.xlsx  260122_rom_24plates_pombe_beads_pub.xlsx  260122_rom_ttubes_pombe_beads_pub.xlsx  260123_rom_supplements_2_pombe_beads_pub.xlsx  (+6 more)
notebooks/: aggregate-multi-sources.ipynb  microscopy-analysis-96-well.ipynb  microscopy-analysis-ttube-24well.ipynb  microscopy-analysis.ipynb  microscopy_helpers.py  od-analysis.ipynb  od_helpers.py  segmentation-example.ipynb
scripts/: 24_beads.py  96_beads.py  aggregate_multi_sources.py  compile_microscopy.py  compile_microscopy_data.py  make_od_heatmaps.py  morning_supplements.py  plot_od_bars_anova.py  segment_cells.py  ttubes_beads.py
