[project]
name = "2026-bead-growth"
description = "Analysis code and data for 'Adding a single glass bead to liquid cultures improves cell culture quality.'"
version = "0.1"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "arcadia-microscopy-tools[all]>=0.2.5",
    "arcadia-pycolor>=0.7.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.15.4",
]

[tool.ruff]
# The directories to consider when resolving first- vs. third-party imports
src = ["."]

line-length = 100
indent-width = 4

# run ruff on jupyter notebooks (this is not enabled by default)
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# ignore star and unused imports
"__init__.py" = ["F403", "F405"]

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pycodestyle error
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
    # pycodestyle warning
    "W",
]

# rule codes to ignore
ignore = []

# Allows fix for all enabled rules when `--fix` is provided
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes, indent with spaces, and respect trailing commas
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
order-by-type = true
no-lines-before = ["future", "standard-library"]
